# node-native-fork

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
inc/: hipc.h
lib/: index.js
test/: forknative.test.js  hipc-test.cc  pinger.js
